--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <div id="content"></div>
+    <div id="gridWrapper"></div>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
